--- a/main.html
+++ b/main.html
@@ -11,30 +11,33 @@
 	<header class="header">
 		<h3>Shaw's News</h3>
 	</header>
-	<div class="latest-news-section">
-		<h2>Latest News Articles</h2>
-		<ul>
-			<li>Article 1</li>
-			<li>Article 2</li>
-			<li>Article 3</li>
-		</ul>
+	<div class="container">
+	  <div class="latest-news-section">
+  		<h2>Latest News Articles</h2>
+  		<ul>
+  			<li>Article 1</li>
+  			<li>Article 2</li>
+  			<li>Article 3</li>
+  		</ul>
+  	</div>
+  	<div class="main">
+  		<h2>Main Article</h2>
+  		<p>Create a webpage layout that matches the provided image. Your HTML and CSS must contain the following:
+  			1.	Use appropriate tags like header, div, h3, ul, li, h2, p, img.
+  			2.	Style the header with the class .header and ensure it has center alignment, padding, and the provided background color.
+  			3.	For the "Latest News" section, use a div with the class .latest-news-section. Inside this div, use ul and li tags, and make sure to have three items. Style this section with the provided background color, padding, and width.
+  			4.	For the pictorial news section, use a div with the class .pictorial-news-section. Ensure the content is centered and style this section with background-color, padding, width, text-align, and border-radius as appropriate.
+  			5.	Apply the provided colors to the header and body.
+  		</p>
+  	</div>
+  	<div class="pictorial-news-section">
+  		<h2>Pictorial News</h2>
+  		<img src="https://images.hindustantimes.com/img/2023/01/29/550x309/delhi_rains_1674974112847_1674981888135_1674981888135.jpeg">
+  		<img src="https://images.hindustantimes.com/img/2023/01/29/550x309/ADANI-INDIA-GAUTAM-ADANI-0_1675011651023_1675011651023_1675011672003_1675011672003.JPG">
+  		<img src="https://images.hindustantimes.com/img/2023/01/29/550x309/FRANCE-REFORM-PENSIONS-31_1675022359706_1675022359706_1675022383851_1675022383851.JPG">
+  	</div>
 	</div>
-	<div>
-		<h2>Main Article</h2>
-		<p>Create a webpage layout that matches the provided image. Your HTML and CSS must contain the following:
-			1.	Use appropriate tags like header, div, h3, ul, li, h2, p, img.
-			2.	Style the header with the class .header and ensure it has center alignment, padding, and the provided background color.
-			3.	For the "Latest News" section, use a div with the class .latest-news-section. Inside this div, use ul and li tags, and make sure to have three items. Style this section with the provided background color, padding, and width.
-			4.	For the pictorial news section, use a div with the class .pictorial-news-section. Ensure the content is centered and style this section with background-color, padding, width, text-align, and border-radius as appropriate.
-			5.	Apply the provided colors to the header and body.
-		</p>
-	</div>
-	<div class="pictorial-news-section">
-		<h2>Pictorial News</h2>
-		<img src="https://images.hindustantimes.com/img/2023/01/29/550x309/delhi_rains_1674974112847_1674981888135_1674981888135.jpeg">
-		<img src="https://images.hindustantimes.com/img/2023/01/29/550x309/ADANI-INDIA-GAUTAM-ADANI-0_1675011651023_1675011651023_1675011672003_1675011672003.JPG">
-		<img src="https://images.hindustantimes.com/img/2023/01/29/550x309/FRANCE-REFORM-PENSIONS-31_1675022359706_1675022359706_1675022383851_1675022383851.JPG">
-	</div>
+	
 	
     <script type="text/javascript" src="./script.js">
 </script>
